--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
   kafka:
-    producer:
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: foo
+      auto-offset-reset: latest
+      value-serializer: org.apache.kafka.common.serialization.StringDeserializer
+      key-serializer: org.apache.kafka.common.serialization.StringDeserializer
       bootstrap-servers: kafka:9092
   jpa:
     properties:
@@ -13,9 +15,9 @@ spring:
       ddl-auto: update
     show-sql: 'true'
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/app_db}
+    username: ${SPRING_DATASOURCE_USERNAME:app_user}
+    password: ${SPRING_DATASOURCE_PASSWORD:app_pass}
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -23,8 +25,8 @@ auto:
   create:
     topics:
       enable: 'true'
-order:
-  topic:
-    name: order-topic
+app:
+  kafka:
+    topic: ${SPRING_KAFKA_TOPIC:ORDER_TOPIC}
 server:
   port: '9191'
