--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-
+*.mvn
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -31,3 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
+mvnw.cmd
+mvnw
